--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "ES2019",
-        "jsx": "preserve",
-        "strictFunctionTypes": true,
-        "sourceMap": true
-    },
-    "exclude": [
-        "node_modules",
-        "**/node_modules/*"
-    ]
+  "compilerOptions": {
+    "module": "CommonJS",
+    "target": "ES2019",
+    "jsx": "preserve",
+    "moduleResolution": "node",
+    "strictFunctionTypes": true,
+    "sourceMap": true,
+    "outDir": "dist"
+  },
+  "exclude": ["node_modules", "**/node_modules/*", "dist", "tests"]
 }
