--- a/package.json
+++ b/package.json
@@ -4,27 +4,32 @@
   "description": "Tidal Social",
   "main": "dist/index.js",
   "scripts": {
+    "prestart": "npm run build",
     "build": "npm run build-ts",
     "build-ts": "tsc",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
-    "start": "node dist/index.js",
+    "start": "node .",
     "watch-ts": "tsc -w"
   },
   "author": "Lionello Lunesu",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "jsdom": "^16.4.0",
     "node-fetch": "^2.6.1",
     "parse5": "^6.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
+    "@types/express": "^4.17.11",
     "@types/jsdom": "^16.2.6",
     "@types/mocha": "^8.2.1",
     "@types/node-fetch": "^2.5.8",
     "@types/parse5": "^6.0.0",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "chai": "^4.3.0",
@@ -32,6 +37,7 @@
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
