--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tidalsocial",
-  "version": "1.0.29",
+  "version": "1.0.41",
   "description": "Tidal Social",
   "main": "dist/index.js",
   "private": true,
@@ -12,7 +12,7 @@
     "prestart": "npm run build",
     "build": "npm run build-ts",
     "build-ts": "tsc",
-    "bump": "npm version patch -f 2>/dev/null | sed 's/^\\([v0-9.]*\\)/export const VERSION = \"\\1\"/' >src/version.ts",
+    "version": "npm version patch -f 2>/dev/null | sed 's/^\\([v0-9.]*\\)/export const VERSION = \"\\1\"/' >src/version.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "dev": "nodemon .",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
