--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^12.0"
+    "node": "^14.0"
   },
   "scripts": {
     "build": "npm run build-ts",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
+    "@types/chai-spies": "^1.0.3",
     "@types/express": "^4.17.11",
     "@types/jsdom": "^16.2.6",
     "@types/mocha": "^8.2.1",
@@ -40,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "chai": "^4.3.0",
+    "chai-spies": "^1.0.0",
     "eslint": "^7.20.0",
     "mocha": "^8.3.0",
     "nodemon": "^2.0.7",
@@ -50,5 +52,24 @@
   },
   "prettier": {
     "semi": false
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true,
+      "es2021": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 12
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {}
   }
 }
