--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,11 @@
 root = true
 
-[**.js]
+[**.{ts,js}]
+charset = utf-8
 indent_style = space
 indent_size = 2
 
 [**.py]
+charset = utf-8
 indent_style = space
 indent_size = 4
