--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "watch-ts": "tsc -w"
   },
   "author": "Lionello Lunesu",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^4.4.1",
