--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "typescript": "^4.1.5"
   },
   "prettier": {
-    "semi": false
+    "semi": false,
+    "printWidth": 88
   },
   "eslintConfig": {
     "env": {
