--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "pretest": "npm run build-ts",
     "test": "mocha dist/tests",
+    "prestart": "npm run build-ts",
     "start": "node .",
     "watch-ts": "tsc -w"
   },
@@ -26,6 +27,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "jsdom": "^16.4.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "parse5": "^6.0.1"
   },
