--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "npm run build-ts",
     "build-ts": "tsc",
+    "clean": "git clean -xf -- dist",
     "version": "node -e 'console.log(`export const VERSION = \"${require(\"./package.json\").version}\"`)' >src/version.ts && git add src/version.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "dev": "nodemon .",
