--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jsdom": "^16.4.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
-    "parse5": "^6.0.1"
+    "parse5": "^6.0.1",
+    "random-useragent": "^0.5.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.15",
