Use package.json vars
https://docs.npmjs.com/cli/v6/using-npm/scripts#packagejson-vars

--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "build": "npm run build-ts",
     "build-ts": "tsc",
     "clean": "git clean -xf -- dist",
-    "version": "node -e 'console.log(`export const VERSION = \"${require(\"./package.json\").version}\"`)' >src/version.ts && git add src/version.ts",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "dev": "nodemon .",
+    "docker-build": "docker build . -t lionello/$npm_package_name:latest",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "pretest": "npm run build-ts",
+    "start": "node .",
     "test": "mocha dist/tests",
     "prestart": "npm run build-ts",
-    "start": "node .",
+    "pretest": "npm run build-ts",
+    "version": "echo export const VERSION = \\\"$npm_package_version\\\" >src/version.ts && git add src/version.ts",
     "watch-ts": "tsc -w"
   },
   "author": "Lionello Lunesu",
