--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "git clean -xf -- dist",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "dev": "nodemon .",
-    "docker-build": "docker build . -t lionello/$npm_package_name:latest",
+    "docker-build": "npm run build && docker build . -t lionello/$npm_package_name:latest",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "start": "node .",
     "test": "mocha dist/tests",
